--- a/.github/workflows/news_collection.yml
+++ b/.github/workflows/news_collection.yml
@@ -24,7 +24,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
+
+    - name: Install Playwright browsers
+      run: |
+        python -m playwright install --with-deps
+       
     - name: Run news collection pipeline
       run: python pipeline.py
       env:
