--- a/.github/workflows/news_collection.yml
+++ b/.github/workflows/news_collection.yml
@@ -28,6 +28,9 @@ jobs:
     - name: Install Playwright browsers
       run: |
         python -m playwright install --with-deps
+
+    - name: Test OpenAI Connectivity
+      run: curl -v https://api.openai.com/v1/models
        
     - name: Run news collection pipeline
       run: python pipeline.py
