--- a/.github/workflows/news_collection.yml
+++ b/.github/workflows/news_collection.yml
@@ -29,6 +29,10 @@ jobs:
       run: |
         python -m playwright install --with-deps
 
+    - name: Set up crawl4ai
+      run: |
+        crawl4ai setup
+
     - name: Test OpenAI Connectivity
       run: curl -v https://api.openai.com/v1/models
        
