--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,49 +1,31 @@
 version: 2
 updates:
-  # Enable version updates for Python dependencies
+  # Enable security updates for Python dependencies
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
       interval: "weekly"
-      day: "monday"
-      time: "09:00"
-    open-pull-requests-limit: 10
-    reviewers:
-      - "bigsliktobi"
-    assignees:
-      - "bigsliktobi"
-    commit-message:
-      prefix: "chore"
-      include: "scope"
+    open-pull-requests-limit: 0
+    ignore:
+      - dependency-type: "all"
+        update-types: ["version-update:semver-major", "version-update:semver-minor", "version-update:semver-patch"]
 
-  # Enable version updates for GitHub Actions
+  # Enable security updates for GitHub Actions
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
-      day: "monday"
-      time: "09:00"
-    open-pull-requests-limit: 5
-    reviewers:
-      - "bigsliktobi"
-    assignees:
-      - "bigsliktobi"
-    commit-message:
-      prefix: "ci"
-      include: "scope"
+    open-pull-requests-limit: 0
+    ignore:
+      - dependency-type: "all"
+        update-types: ["version-update:semver-major", "version-update:semver-minor", "version-update:semver-patch"]
 
-  # Enable version updates for Docker
+  # Enable security updates for Docker
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
       interval: "weekly"
-      day: "monday"
-      time: "09:00"
-    open-pull-requests-limit: 5
-    reviewers:
-      - "bigsliktobi"
-    assignees:
-      - "bigsliktobi"
-    commit-message:
-      prefix: "docker"
-      include: "scope"
+    open-pull-requests-limit: 0
+    ignore:
+      - dependency-type: "all"
+        update-types: ["version-update:semver-major", "version-update:semver-minor", "version-update:semver-patch"]
