--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,27 +5,18 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
-    open-pull-requests-limit: 0
-    ignore:
-      - dependency-type: "all"
-        update-types: ["version-update:semver-major", "version-update:semver-minor", "version-update:semver-patch"]
+    security-updates-only: true
 
   # Enable security updates for GitHub Actions
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
-    open-pull-requests-limit: 0
-    ignore:
-      - dependency-type: "all"
-        update-types: ["version-update:semver-major", "version-update:semver-minor", "version-update:semver-patch"]
+    security-updates-only: true
 
   # Enable security updates for Docker
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
       interval: "weekly"
-    open-pull-requests-limit: 0
-    ignore:
-      - dependency-type: "all"
-        update-types: ["version-update:semver-major", "version-update:semver-minor", "version-update:semver-patch"]
+    security-updates-only: true
